# fl-for-dreamt

./: .gitattributes  .gitignore  README.md  final_model.pt  pyproject.toml
data/dreamt/data_64Hz/: S002_whole_df_preprocessed.csv  S003_whole_df_preprocessed.csv  S004_whole_df_preprocessed.csv  S005_whole_df_preprocessed.csv  S006_whole_df_preprocessed.csv  S007_whole_df_preprocessed.csv  S008_whole_df_preprocessed.csv  S009_whole_df_preprocessed.csv  S010_whole_df_preprocessed.csv  S011_whole_df_preprocessed.csv  S012_whole_df_preprocessed.csv  S013_whole_df_preprocessed.csv  S014_whole_df_preprocessed.csv  S015_whole_df_preprocessed.csv  S016_whole_df_preprocessed.csv  S017_whole_df_preprocessed.csv  S018_whole_df_preprocessed.csv  S019_whole_df_preprocessed.csv  S020_whole_df_preprocessed.csv  S021_whole_df_preprocessed.csv
fedlab/: __init__.py  client_app.py  server_app.py  task.py
fedlab/data/: dreamt.py  har.py
fedlab/model/dreamt/: cnn_gru.py  gru.py
fedlab/model/har/: cnn.py  gru.py
fedlab/utils/: evaluate.py  model.py  plot.py
physionet.org/files/dreamt/2.1.0/data_64Hz/: S003_whole_df.csv
